--- a/presentation.tex
+++ b/presentation.tex
@@ -67,9 +67,7 @@ peut-être pas besoin de slide... le slide avec le titre intro peut suffire
 
 \end{frame}
 
-
-\section{Présentation des modèles étudiés}
-\subsection*{Cadre général}
+\section{Cadre général}
 \begin{frame}{Cadre général}{}
 \begin{block}{Modèle général}
 	\begin{equation}
@@ -82,8 +80,9 @@ peut-être pas besoin de slide... le slide avec le titre intro peut suffire
 \end{itemize}
 \end{frame}
 
-\subsection{Croissance logistique}
-\begin{frame}{Croissance Logistique}{}
+\section{Croissance logistique}
+\subsection{Présentation du modèle}
+\begin{frame}{Présentation du modèle}{}
 \begin{block}{Croissance Logistique}
 	$$\frac{\partial u(t,x)}{\partial t}=f(u(t,x))+d\Delta u(t,x)$$
 	$$f(u(t,x))=\alpha u (1 - \dfrac{u}{K}) $$
@@ -94,38 +93,8 @@ peut-être pas besoin de slide... le slide avec le titre intro peut suffire
 \end{itemize}
 \end{frame}
 
-\subsection{Effet Allee}
-\begin{frame}{Modèle Allee}{}
-\begin{block}{Modèle Allee}
-	$$\frac{\partial u(t,x)}{\partial t}=f(u(t,x))+d\Delta u(t,x)$$
-	$$f(u(t,x))=ku(1-u)(u-A)$$
-\end{block}
-\begin{itemize}
-    \item $k$ : Taux de croissance normalisé constant 
-    \item $A$ : Densité critique
-\end{itemize}
-$$k=\frac{4}{(1-A)^2}$$
-\end{frame}
-
-\subsection{Système de Lotka-Volterra}
-\begin{frame}{Système de Lotka-Volterra}{}
-\begin{block}{Modèle de compétition}
-	$$\begin{cases} \frac{\partial u(t,x)}{\partial t} = f(u,v) + d_1\Delta u\\ \frac{\partial v(t,x)}{\partial t} = g(u,v) + d_2 \Delta v \\ 
-\end{cases}$$
-	$$f(u,v) = \alpha_1 u\left(1-\frac{u}{K_1}-\gamma_1\frac{v}{K_1}\right) \text{, } g(u,v) = \alpha_2 v\left(1-\frac{v}{K_2}-\gamma_2\frac{u}{K_2}\right)$$
-\end{block}
-\begin{itemize}
-	\item u(t,x) : Densité de population des Hommes Modernes 
-    \item v(t,x) : Densité de population des Hommes de Néanderthal 
-    \item $K_1$ et $K_2$ : Capacités d'accueil du milieu
-    \item $\gamma_1$ et $\gamma_2$ : Coefficients de compétition
-    \item $\alpha_1$ et $\alpha_2$ : Taux de croissance
-\end{itemize}
-\end{frame}
-
-\section{Analyse mathématiques}
-\subsection{Croissance logistique}
-\begin{frame}{Croissance logistique}{}
+\subsection{Analyse mathématique}
+\begin{frame}{Analyse mathématique}{}
 \begin{itemize}
 	\item[$\bullet$] Équilibres: $u=0 {\ et\ } u=K$
 	\item[$\bullet$] MONOSTABLE
@@ -133,26 +102,7 @@ $$k=\frac{4}{(1-A)^2}$$
 \end{itemize}
 \end{frame}
 
-\subsection{Effet Allee}
-\begin{frame}{Effet Allee}{}
-\begin{itemize}
-	\item[$\bullet$] Équilibres: $u=0, u=A \text{ et } u=1$
-	\item[$\bullet$] BISTABLE
-	\item[$\bullet$] 2 scénarios selon la valeur de A :
-	\begin{itemize}
-		\item[-] $A<0.5$ : $c>0$ $\rightarrow$ "1 envahit 0"
-		\item[-] $A>0.5$ : $c<0$ $\rightarrow$ "0 envahit 1"
-	\end{itemize}
-\end{itemize}
-\end{frame}
-
-\subsection{Modèle avec compétition}
-\begin{frame}{Système de Lotka Volterra}{}
-???
-\end{frame}
-
-\section{Simulations numériques}
-\subsection{Croissance logistique}
+\subsection{Simulations numériques}
 \begin{frame}{Propagation 1D}{}
 \begin{figure}[H]
 	\centering
@@ -216,8 +166,34 @@ $$k=\frac{4}{(1-A)^2}$$
 \end{figure}
 \end{frame}
 
+\section{Effet Allee}
+\subsection{Présentation du modèle}
+\begin{frame}{Présentation du modèle}{}
+\begin{block}{Modèle Allee}
+	$$\frac{\partial u(t,x)}{\partial t}=f(u(t,x))+d\Delta u(t,x)$$
+	$$f(u(t,x))=ku(1-u)(u-A)$$
+\end{block}
+\begin{itemize}
+    \item $k$ : Taux de croissance normalisé constant 
+    \item $A$ : Densité critique
+\end{itemize}
+$$k=\frac{4}{(1-A)^2}$$
+\end{frame}
 
-\subsection{Effet Allee}
+\subsection{Analyse mathématique}
+\begin{frame}{Analyse mathématique}{}
+\begin{itemize}
+	\item[$\bullet$] Équilibres: $u=0, u=A \text{ et } u=1$
+	\item[$\bullet$] BISTABLE
+	\item[$\bullet$] 2 scénarios selon la valeur de A :
+	\begin{itemize}
+		\item[-] $A<0.5$ : $c>0$ $\rightarrow$ "1 envahit 0"
+		\item[-] $A>0.5$ : $c<0$ $\rightarrow$ "0 envahit 1"
+	\end{itemize}
+\end{itemize}
+\end{frame}
+
+\subsection{Simulations numériques}
 \begin{frame}{$\ d=0.5, A=0.25 (k=64), u_0=0.1$}{}
 \begin{figure}[H]
 	\centering
@@ -302,7 +278,29 @@ $$k=\frac{4}{(1-A)^2}$$
 \end{figure}
 \end{frame}
 
-\subsection{Modèle avec compétition}
+\section{Système de Lotka-Volterra}
+\subsection{Présentation du modèle}
+\begin{frame}{Présentation du modèle}{}
+\begin{block}{Modèle de compétition}
+	$$\begin{cases} \frac{\partial u(t,x)}{\partial t} = f(u,v) + d_1\Delta u\\ \frac{\partial v(t,x)}{\partial t} = g(u,v) + d_2 \Delta v \\ 
+\end{cases}$$
+	$$f(u,v) = \alpha_1 u\left(1-\frac{u}{K_1}-\gamma_1\frac{v}{K_1}\right) \text{, } g(u,v) = \alpha_2 v\left(1-\frac{v}{K_2}-\gamma_2\frac{u}{K_2}\right)$$
+\end{block}
+\begin{itemize}
+	\item u(t,x) : Densité de population des Hommes Modernes 
+    \item v(t,x) : Densité de population des Hommes de Néanderthal 
+    \item $K_1$ et $K_2$ : Capacités d'accueil du milieu
+    \item $\gamma_1$ et $\gamma_2$ : Coefficients de compétition
+    \item $\alpha_1$ et $\alpha_2$ : Taux de croissance
+\end{itemize}
+\end{frame}
+
+\subsection{Analyse mathématique}
+\begin{frame}{Analyse mathématique}{}
+???
+\end{frame}
+
+\subsection{Simulations numériques}
 \begin{frame}{Front d'ondes}{}
 \begin{figure}[H]
 \centering
