ajout partie comp

--- a/presentation.tex
+++ b/presentation.tex
@@ -297,7 +297,12 @@ $$k=\frac{4}{(1-A)^2}$$
 
 \subsection{Analyse mathématique}
 \begin{frame}{Analyse mathématique}{}
-???
+\begin{itemize}
+\item[$\bullet$] On prend $\gamma_1 < \frac{K_1}{K_2}$ et $\gamma_2 > \frac{K_2}{K_1}$
+\item[$\bullet$] Trois équilibres $(0,0)$, $(0,K_2)$, $(K_1,0)$.
+\item[$\bullet$] En posant $\alpha = \alpha_1 = \alpha_2$, $K = K_1 = K_2$, $D = d_1 = d_2$ et $\gamma_1 + \gamma_2 = 2$ : existence de fronts d'ondes reliant 0 et K.
+\item[$\bullet$] $c_{min} = 2 \sqrt{\alpha D(1-\gamma_1)}$
+\end{itemize}
 \end{frame}
 
 \subsection{Simulations numériques}
